# Aquila-Resolve

./: .deepsource.toml  .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.cfg
.github/: codecov.yml
.github/workflows/: codecov-coverage.yml  codeql-analysis.yml  coverage.yml  deploy.yml  publish-to-pypi.yml  publish-to-test-pypi.yml  pull-request.yml  push-main.yml  python-lint.yml  python-package.yml
src/Aquila_Resolve/: __init__.py  __main__.py  dict_cache.py  dict_reader.py  dictionary.py  filter.py  format_ph.py  g2p.py  h2p.py  het_dict.py  infer.py  processors.py  resolve.py  static_dict.py  symbols.py
src/Aquila_Resolve/cli/: __init__.py  cli.py
src/Aquila_Resolve/data/: __init__.py  remote.py
src/Aquila_Resolve/models/: __init__.py  predictor.py
src/Aquila_Resolve/models/dp/: __init__.py  phonemizer.py  result.py
src/Aquila_Resolve/models/dp/model/: model.py  predictor.py  utils.py
src/Aquila_Resolve/models/dp/preprocessing/: text.py  utils.py
src/Aquila_Resolve/models/dp_infer/: __init__.py  phonemizer.py
src/Aquila_Resolve/models/dp_infer/model/: model.py  predictor.py
src/Aquila_Resolve/text/: numbers.py  replace.py
src/Aquila_Resolve/utils/: parse_line.py  parser.py
tests/: _jb_pytest_runner.py.pclprof  conftest.py  test_converter.py  test_dict_cache.py  test_dict_reader.py  test_dictionary.py  test_filter.py  test_format_ph.py  test_g2p.py  test_h2p.py  test_infer.py  test_processors.py  test_remote.py  test_replace.py  test_static_dict.py  test_symbols.py
tests/cli/: test_cli.py
tests/perf/: pf_hetdict.py  pf_infer.py  utils.py
tests/text/: test_numbers.py
tests/utils/: test_ui.py  test_ui_common.py
