[metadata]
name = Aquila-Resolve
version = 1.0.0
author = ionite
author_email = dev@ionite.io
description = G2p Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ionite34/Aquila-Resolve'
license = Apache 2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License

[options]
packages =
    Aquila_Resolve
install_requires =
    tqdm>=4.64.0
    nltk~=3.7
    importlib_resources~=5.7.1; python_version < '3.9'
    setuptools>=62.2.0
    pywordsegment>=0.2.1
    torch~=1.11.0
    inflect>=5.6.0
    requests>=2.27.1
python_requires = >=3.7
package_dir =
    =src
zip_safe = no
