[metadata]
name = Aquila-Resolve
version = 0.1.2-dev1
author = ionite
author_email = dev@ionite.io
description = Augmented Recurrent Neural Grapheme-to-Phoneme conversion with Inflectional Orthography.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ionite34/Aquila-Resolve'
license = Apache 2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.7
install_requires =
    tqdm>=4.64.0
    nltk>=3.2.5
    importlib_resources~=5.7.1; python_version < '3.9'
    setuptools>=57.4.0
    pywordsegment>=0.2.1
    torch~=1.11.0
    inflect>=2.1.0
    requests>=2.23.0
    numpy>=1.18.0
zip_safe = False
include_package_data = True

[options.package_data]
* = *.json, *.json.gz

[options.packages.find]
where = src